--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,25 @@ footer{
         flex-direction: row;
         justify-content: space-around;
     }
+    .white-space{
+        margin-top: 90px;
+    }
+    .jeremy-img-container{
+        width: 54%;
+        left: 8rem;
+    }
+    .testimonial-title{
+        font-size: 40px;
+    }
+    footer{
+        flex-direction: space-between;
+        padding: 0;
+        margin: 0;
+        height: 12rem;
+    }
+    .footer-logo{
+        width: 85px;
+    }
 }
 
 @media screen and (min-width: 1024px){
